<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/welcome" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/row1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:text="@string/picture"
            android:textSize="20sp"
            android:id="@+id/myButt"
            android:background="@drawable/button"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:id="@+id/galButt"
            android:textSize="20sp"
            android:background="@drawable/button"
            />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:id="@+id/row2"-->
        <!--android:layout_above="@+id/row1"-->
        <!--android:layout_marginBottom="20dp">-->

            <!--<Button-->
                <!--android:layout_width="0.0dip"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/score"-->
                <!--android:textSize="13sp"-->
                <!--android:id="@+id/scoreButt"-->
                <!--android:background="@drawable/button"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_marginEnd="10dp"-->
                <!--/>-->

            <!--<Button-->
                <!--android:layout_width="0.0dip"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/guess"-->
                <!--android:id="@+id/guessButt"-->
                <!--android:background="@drawable/button"-->
                <!--/>-->
    <!--</LinearLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


</RelativeLayout>